--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@ layout: default
   <body>
     <p>Movies Updater is an app that backs up photos and videos, and is also used to restore photos and videos.</p>
     
-    <p>Movies Updater uses batch files to copy files.</p>
+    <p>Features:</p>
+    <p>1. Can back up files.</p>
+    <p>2. Can update to a newer version.</p>
+    <p>3. Can restore files.</p>
 
+    
   </body>
 </html>
