--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@ layout: default
     <title>Movies Updater</title>
   </head>
   <body>
-    <p>Movies Updater is an app that backs up photos and videos, and is also used to restore photos and videos.</p>
+    <p>Movies Updater is based of the command line and uses batch scripts to perform operations which can do a lot!.</p>
     
     <p>Features:</p>
     <p>1. Can back up files.</p>
     <p>2. Can update to a newer version.</p>
     <p>3. Can restore files.</p>
+    <p>4. You have much more options with Movies Updater.</p>
 
-    
+    <p>System requirements:</p>
+    <p>Windows 7/8/8.1/10</p>
+
+    <p>If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</p>
+
   </body>
 </html>
