--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ layout: default
     <p>System requirements:</p>
     <p>Windows 7/8/8.1/10</p>
 
+    <a href="/" class="question-hyperlink" If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</a>
+
     <p>If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</p>
 
   </body>
