--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -1,1 +1,16 @@
+<!doctype html>
+<html>
+  <head>
+    <title>Movies Updater</title>
+     <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="This is the website for the MasterZayaan YouTube channel. : ">
+
+    <title>Movies Updater</title>
+  </head>
+  <body>
+    <p></p>
+
+  </body>
+</html>
 
