--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -9,7 +9,11 @@
     <title>Movies Updater</title>
   </head>
   <body>
-    <p></p>
+    <p>So, you want to install Movies Updater on Windows Vista or Windows XP.</p>
+
+    <p>Well, while we don't recommend it, you can install the app on Vista or XP but you'll need to do a lot more then just run an installer.</p>
+
+    <p><strong>Windows Vista:</strong></p>
 
   </body>
 </html>
