--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
     <p>System requirements:</p>
     <p>Windows 7/8/8.1/10</p>
 
-    <a href="/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html" class="question-hyperlink" If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</a>
+    <a href="/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp" class="question-hyperlink" If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</a>
 
     <p>If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</p>
 
