--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -1,12 +1,16 @@
+---
+layout: default
+---
+
 <!doctype html>
 <html>
   <head>
-    <title>Movies Updater</title>
+    <title>How to install Movies Updater on Windows Vista/XP</title>
      <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="This is the website for the MasterZayaan YouTube channel. : ">
 
-    <title>Movies Updater</title>
+    <title>How to install Movies Updater on Windows Vista/XP</title>
   </head>
   <body>
     <p>So, you want to install Movies Updater on Windows Vista or Windows XP.</p>
@@ -17,4 +21,3 @@
 
   </body>
 </html>
-
