--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -18,6 +18,9 @@ layout: default
     <p>Well, while we don't recommend it, you can install the app on Vista or XP but you'll need to do a lot more then just run an installer.</p>
 
     <p><strong>Windows Vista:</strong></p>
+    <p>First up, you want to download the ZIP file and copy the latest version to wherever you want then run it.</p>
+    <p>Once you have run the app, install it!</p>
+    <p>Now, what you will need to do is </p>
 
   </body>
 </html>
