--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -20,7 +20,8 @@ layout: default
     <p><strong>Windows Vista:</strong></p>
     <p>First up, you want to download the ZIP file and copy the latest version to wherever you want then run it.</p>
     <p>Once you have run the app, install it!</p>
-    <p>Now, what you will need to do is open Command Prompt and then cd to C:\Program Files (x86)\Movies Updater or C:\Program Files\Movies Updater and then</p>
+    <p>Now, what you will need to do is open Command Prompt and then cd to C:\Program Files (x86)\Movies Updater or C:\Program Files\Movies Updater and then type in Starter or Starter.bat.</p>
+    <p><strong>Problem:</strong></p>
 
   </body>
 </html>
