--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -22,6 +22,7 @@ layout: default
     <p>Once you have run the app, install it!</p>
     <p>Now, what you will need to do is open Command Prompt and then cd to C:\Program Files (x86)\Movies Updater or C:\Program Files\Movies Updater and then type in Starter or Starter.bat.</p>
     <p><strong>Problem:</strong></p>
+    <p>Windows Vista doesn't think that the app is a valid Win32 app due to it meant to run on newer OSs.</p>
 
   </body>
 </html>
