--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -8,7 +8,7 @@ layout: default
     <title>How to install Movies Updater on Windows Vista/XP</title>
      <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="This is the website for the MasterZayaan YouTube channel. : ">
+    <meta name="description" content="How to install Movies Updater on Windows Vista/XP. : ">
 
     <title>How to install Movies Updater on Windows Vista/XP</title>
   </head>
