--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -14,15 +14,15 @@ layout: default
   </head>
   <body>
     <p>So, you want to install Movies Updater on Windows Vista or Windows XP.</p>
-
     <p>Well, while we don't recommend it, you can install the app on Vista or XP but you'll need to do a lot more then just run an installer.</p>
-
-    <p><strong>Windows Vista:</strong></p>
-    <p>First up, you want to download the ZIP file and copy the latest version to wherever you want then run it.</p>
+    <p><strong>Installing Movies Updater on Windows Vista:</strong></p>
+    <p>First up, you want to download the ZIP file and copy the latest version of the app to wherever you want then run it.</p>
     <p>Once you have run the app, install it!</p>
     <p>Now, what you will need to do is open Command Prompt and then cd to C:\Program Files (x86)\Movies Updater or C:\Program Files\Movies Updater and then type in Starter or Starter.bat.</p>
     <p><strong>Problem:</strong></p>
     <p>Windows Vista doesn't think that the app is a valid Win32 app due to it meant to run on newer OSs.</p>
-
+    <p><strong>Installing Movies Updater on Windows XP:</strong></p>
+    <p>Yet again, download the ZIP file and copy the latest version of the app to your desktop for easy access.</p>
+    <p>This time, you'll need to go to https://7-zip.org and download and install it.</p>
   </body>
 </html>
