Adding 7-Zip to extras

--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -23,6 +23,7 @@ layout: default
     <p>Windows Vista doesn't think that the app is a valid Win32 app due to it meant to run on newer OSs.</p>
     <p><strong>Installing Movies Updater on Windows XP:</strong></p>
     <p>Yet again, download the ZIP file and copy the latest version of the app to your desktop for easy access.</p>
+    <a href="/movies-updater" class="question-hyperlink" Don't worry! Let's go back and explore Movies Updater, shall we?</a></a>
     <p>This time, you'll need to go to https://7-zip.org and download and install it.</p>
   </body>
 </html>
