--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -23,7 +23,10 @@ layout: default
     <p>Windows Vista doesn't think that the app is a valid Win32 app due to it meant to run on newer OSs.</p>
     <p><strong>Installing Movies Updater on Windows XP:</strong></p>
     <p>Yet again, download the ZIP file and copy the latest version of the app to your desktop for easy access.</p>
-    <a href="/movies-updater" class="question-hyperlink" Don't worry! Let's go back and explore Movies Updater, shall we?</a></a>
-    <p>This time, you'll need to go to https://7-zip.org and download and install it.</p>
+    <p>This time, you'll need to download 7-Zip and install it.</p>
+    <a href="/movies-updater/extras/7z1900.exe" class="question-hyperlink" Click here to download 7-Zip for x86 machines.</a>
+    <p>Click here to download 7-Zip for x86 machines.</p>
+    <a href="/movies-updater/extras/7z1900-x64.exe" class="question-hyperlink" Click here to download 7-Zip for x64 machines.</a>
+    <p>Click here to download 7-Zip for x64 machines.</p>
   </body>
 </html>
