--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -24,9 +24,14 @@ layout: default
     <p><strong>Installing Movies Updater on Windows XP:</strong></p>
     <p>Yet again, download the ZIP file and copy the latest version of the app to your desktop for easy access.</p>
     <p>This time, you'll need to download 7-Zip and install it.</p>
-    <a href="/movies-updater/extras/7z1900.exe" class="question-hyperlink" Click here to download 7-Zip for x86 machines.</a>
-    <p>Click here to download 7-Zip for x86 machines.</p>
+    <a href="/movies-updater/extras/7z1900.exe" class="question-hyperlink" Click here to download 7-Zip for x86/32 bit machines.</a>
+    <p>Click here to download 7-Zip for x86/32 bit machines.</p>
     <a href="/movies-updater/extras/7z1900-x64.exe" class="question-hyperlink" Click here to download 7-Zip for x64 machines.</a>
     <p>Click here to download 7-Zip for x64 machines.</p>
+    <p>Once you have downloaded and installed 7-Zip, right-click on the installer and click Open Archive.</p>
+    <p>Then select all the files and folders in the list and press Extract.</p>
+    <p>Now if you have a x86/32 bit system, change the extracting path to C:\Program Files\Movies Updater.</p>
+    <p>But if you have a x64/64 bit system, change the extracting path to C:\Program Files (x86)\Movies Updater.</p>
+    <p><strong>DON'T CHANGE ANYTHING ELSE, OTHERWISE MOVIES UPDATER WON'T INSTALL PROPERLY!</strong></p>
   </body>
 </html>
