--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -29,5 +29,6 @@ layout: default
     <p>Now if you have a x86/32 bit system, change the extracting path to C:\Program Files\Movies Updater.</p>
     <p>But if you have a x64/64 bit system, change the extracting path to C:\Program Files (x86)\Movies Updater.</p>
     <p><strong>DON'T CHANGE ANYTHING ELSE, OTHERWISE MOVIES UPDATER WON'T INSTALL PROPERLY!</strong></p>
+    <P>Once extracted do the same process for Vista, open Command Prompt, go to C:\Program Files (x86)/Movies Updater for x64/64 bit systems or go to C:\Program Files\Movies Updater for x86/32 bit systems.</P>
   </body>
 </html>
