--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -29,7 +29,7 @@ layout: default
     <p>Now if you have a x86/32 bit system, change the extracting path to C:\Program Files\Movies Updater.</p>
     <p>But if you have a x64/64 bit system, change the extracting path to C:\Program Files (x86)\Movies Updater.</p>
     <p><strong>DON'T CHANGE ANYTHING ELSE, OTHERWISE MOVIES UPDATER WON'T INSTALL PROPERLY!</strong></p>
-    <p>Once extracted do the same process for Vista, open Command Prompt, go to C:\Program Files (x86)/Movies Updater for x64/64 bit systems or go to C:\Program Files\Movies Updater for x86/32 bit systems.</p>
+    <p>Once extracted do the same process that we did for Vista, open Command Prompt, go to C:\Program Files (x86)\Movies Updater for x64/64 bit systems or go to C:\Program Files\Movies Updater for x86/32 bit systems.</p>
     <p>Finally, once you have gone through all those steps, type in Starter or Starter.bat and enjoy Movies Updater.</p>
     <p>I have also provided all the tools you need to do this, as well as a batch script to put on your desktop so that you can open Movies Updater with ease.</p>
     <a href="/movies-updater/extras/7z1900.exe" class="question-hyperlink" Click here to download 7-Zip for x86/32 bit machines.</a>
