--- a/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
+++ b/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp/index.html
@@ -19,7 +19,7 @@ layout: default
     <p>First up, you want to download the ZIP file and copy the latest version of the app to wherever you want then run it.</p>
     <p>Once you have run the app, install it!</p>
     <p>Now, what you will need to do is open Command Prompt and then cd to C:\Program Files (x86)\Movies Updater or C:\Program Files\Movies Updater and then type in Starter or Starter.bat.</p>
-    <p><strong>Problem:</strong></p>
+    <p><strong>Issue:</strong></p>
     <p>Windows Vista doesn't think that the app is a valid Win32 app due to it meant to run on newer OSs.</p>
     <p><strong>Installing Movies Updater on Windows XP:</strong></p>
     <p>Yet again, download the ZIP file and copy the latest version of the app to your desktop for easy access.</p>
@@ -32,6 +32,10 @@ layout: default
     <p>Once extracted do the same process that we did for Vista, open Command Prompt, go to C:\Program Files (x86)\Movies Updater for x64/64 bit systems or go to C:\Program Files\Movies Updater for x86/32 bit systems.</p>
     <p>Finally, once you have gone through all those steps, type in Starter or Starter.bat and enjoy Movies Updater.</p>
     <p>I have also provided all the tools you need to do this, as well as a batch script to put on your desktop so that you can open Movies Updater with ease.</p>
+    <p><strong>Issue:</strong></p>
+    <p>XP has the same issue with Vista as the EXE is not a valid Win32 app due to it being designed for newer operating systems.</p>
+    <p>But XP can't launch the Movies Updater installer for some weird reason.</p>
+    <p><strong>Downloads for the tools required to install Movies Updater on Vista/XP:</strong></p>
     <a href="/movies-updater/extras/7z1900.exe" class="question-hyperlink" Click here to download 7-Zip for x86/32 bit machines.</a>
       <p>Click here to download 7-Zip for x86/32 bit machines.</p>
       <a href="/movies-updater/extras/7z1900-x64.exe" class="question-hyperlink" Click here to download 7-Zip for x64/64 bit machines.</a>
