--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 
     <a href="/movies-updater/tutorials/how-to-get-movies-updater-working-on-windows-vista-and-windows-xp" class="question-hyperlink" If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</a>
 
-    <p>If you would like to get Movies Updater on Windows Vista or Windows XP, follow these steps!</p>
+    <p>If you would like to get Movies Updater on Windows Vista or Windows XP, click here!</p>
 
   </body>
 </html>
