--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
     <title>Movies Updater</title>
   </head>
   <body>
-    <p>Movies Updater is based of the command line and uses batch scripts to perform operations which can do a lot!</p>
+    <p>Movies Updater is based of the command line and uses batch scripts to perform operations which can make it do a lot!</p>
     
     <p>Features:</p>
     <p>1. Can back up files.</p>
